Minor fix to tag input on mobile

--- a/src/components/Products/search.css
+++ b/src/components/Products/search.css
@@ -50,18 +50,10 @@
     /* match tag layout */
     padding: 7px 2px;
     margin-bottom: 6px;
+    position: relative;
   
     /* prevent autoresize overflowing the container */
     max-width: 100%;
-  }
-  
-  @media screen and (min-width: 30em) {
-  
-    .react-tags__search {
-      /* this will become the offsetParent for suggestions */
-      position: relative;
-    }
-  
   }
   
   .react-tags__search input {
@@ -100,9 +92,8 @@
     left: 0;
     width: auto;
   }
-  
+
   @media screen and (min-width: 30em) {
-  
     .react-tags__suggestions {
       width: 240px;
     }
